# osu-data

./: .env  .gitignore  README.md  docker-compose.yml  download.Dockerfile  mysql.cnf  osu.files.Dockerfile  osu.files.dl.entrypoint.sh  osu.mysql.Dockerfile  osu.mysql.dl.Dockerfile  osu.mysql.dl.entrypoint.sh  osu.mysql.healthcheck.sh  pyproject.toml  test.tar.bz2
.github/workflows/: create-dataset.yml  docker-image.yml  docker-services.yml  get-maps.yml
osu_data/: docker-compose.yml  main.py  osu.files.Dockerfile  osu.mysql.healthcheck.sh
osu_data/nginx/: local.conf
osu_data_docker/: docker-compose.yml  main.py
osu_dataset/: check_mysql_ready.sh  create_dataset.py  export_dataset.py
rsc/: 2023_05_01_osu_files.tar.bz2  2023_05_01_performance_mania_top_1000.tar.bz2  YYYY_MM_DD_osu_files.tar.bz2  YYYY_MM_DD_performance_mania_top_1000.tar.bz2
scripts/: get_maps.sh
test/: .test.env  test.tar.bz2
